k8s-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-deployment
  labels:
    app: template
spec:
  replicas: 2
  selector:
    matchLabels:
      app: template
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: template
    spec:
      containers:
      - name: template
        image: ghcr.io/lukaj-master/demo2-app:sha-ea10430555b19374899f07084c59cdeadc2bd010
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 3
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 12
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 3
